--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "typescript": "^4.1.3"
   },
-  "scripts": {    
+  "scripts": {
     "start": "tsc-watch --onSuccess \" node dist/index.js\""
   },
   "devDependencies": {
